referential_tests/src/failing/circular.stderr
error: lifetime may not live long enough
 --> src/failing/circular.rs:5:1
  |
5 | #[referential('a)]
  | ^^^^^^^^^^^^^^--^^
  | |             |
  | |             lifetime `'a` defined here
  | returning this value requires that `'a` must outlive `'static`
  |
  = note: requirement occurs because of the type `Cell<Option<&Circular<()>>>`, which makes the generic argument `Option<&Circular<()>>` invariant
  = note: the struct `Cell<T>` is invariant over the parameter `T`
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
  = note: this error originates in the attribute macro `referential` (in Nightly builds, run with -Z macro-backtrace for more info)
